@@ -3,96 +3,129 @@ package org.digitalsmile.parser;
 import org.openjdk.jextract.Declaration;
 import org.openjdk.jextract.JextractTool;
 import org.openjdk.jextract.Type;
+import org.openjdk.jextract.impl.TypeImpl;
 
-import javax.annotation.processing.ProcessingEnvironment;
-import javax.tools.Diagnostic;
-import javax.tools.FileObject;
-import javax.tools.StandardLocation;
-import java.io.File;
 import java.io.IOException;
-import java.io.Writer;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 
 public class Parser {
-    private final StructRecord structRecord = new StructRecord();
-    private final ProcessingEnvironment processingEnvironment;
+    private final Declaration.Scoped parsed;
+    private final String structName;
+    private final String packageName;
+    private final String prettyName;
+    private final Map<String, String> parsingStructsMap = new HashMap<>();
 
-    public Parser(ProcessingEnvironment processingEnv) {
-        this.processingEnvironment = processingEnv;
-    }
+    private final NativeMemoryModel nativeMemoryModel;
 
-    public void parse(Path headerPath, String structName, String prettyName, String packageName) throws IOException {
+    public static void main(String[] args) throws IOException {
         Declaration.Scoped parsed;
         try {
-            parsed = JextractTool.parse(List.of(headerPath));
+            parsed = JextractTool.parse(Path.of(args[0]));
         } catch (ExceptionInInitializerError e) {
-            processingEnvironment.getMessager().printMessage(Diagnostic.Kind.ERROR, e.getCause().toString());
+            System.err.println(e.getMessage());
             return;
         }
-        structRecord.setPackageName(packageName);
-        structRecord.setRecordName(prettyName);
+        var packageName = args[1];
+        var guid = args[2];
+        var allStructsToBeParsed = Arrays.copyOfRange(args, 3, args.length);
+        for (int i = 3; i < args.length; i++) {
+            var struct = args[i].split(":");
+            var structName = struct[0];
+            var prettyName = struct[1];
+            var parser = new Parser(parsed, structName, prettyName, packageName, allStructsToBeParsed);
+            parser.parse(guid);
+        }
+    }
+
+    public Parser(Declaration.Scoped parsed, String structName, String prettyName, String packageName, String[] allStructsToBeParsed) {
+        this.parsed = parsed;
+        this.structName = structName;
+        this.packageName = packageName;
+        this.prettyName = prettyName;
+        this.nativeMemoryModel = new NativeMemoryModel(structName);
+        for (String s : allStructsToBeParsed) {
+            var structs = s.split(":");
+            parsingStructsMap.put(structs[0], structs[1]);
+        }
+    }
+
+
+    public void parse(String runId) throws IOException {
         for (Declaration declaration : parsed.members()) {
             if (declaration.name().equals(structName)) {
                 var scoped = (Declaration.Scoped) declaration;
-                parseField(scoped);
+                parseField(scoped, nativeMemoryModel.getNodes());
             }
         }
-
-        try {
-            FileObject file = processingEnvironment.getFiler().createSourceFile(packageName + "." + prettyName);
-            Writer writer = file.openWriter();
-            writer.write(structRecord.compileTemplate());
-            writer.close();
-        } catch (Exception e) {
-            processingEnvironment.getMessager().printMessage(Diagnostic.Kind.ERROR, e.toString());
-        }
-        //Files.writeString(Path.of(Path.of("src/main/java/org/digitalsmile/runj/") + File.separator + prettyName + ".java"), structRecord.compileTemplate());
-        //System.out.println(structRecord.compileTemplate());
-
+        System.out.println(nativeMemoryModel);
+        var tmpPath = System.getProperty("java.io.tmpdir");
+        var directory = Files.createDirectories(Path.of(tmpPath, runId, packageName));
+        var file = Files.createFile(Path.of(directory.toFile().getAbsolutePath(), prettyName));
+        Files.write(file, StructComposer.compose(nativeMemoryModel, packageName, prettyName, parsingStructsMap::get).getBytes());
     }
 
-    private void parseField(Declaration.Scoped parent) {
+    private void parseField(Declaration.Scoped parent, List<NativeMemoryNode> nodes) {
+        var unionCount = 1;
         for (Declaration field : parent.members()) {
-            var variable = (Declaration.Variable) field;
-
-            parseType(variable.type(), 0, variable.name());
+            if (field instanceof Declaration.Variable variable) {
+                nodes.add(parseType(variable.type(), variable.name()));
+            } else if (field instanceof Declaration.Scoped scoped) {
+                switch (scoped.kind()) {
+                    case UNION -> {
+                        var unionNode = new NativeMemoryNode("union_" + unionCount, null);
+                        parseField(scoped, unionNode.getNodes());
+                        nodes.add(unionNode);
+                    }
+                    case null, default -> System.err.println("Unknown field type " + scoped.kind());
+                }
+            }
         }
     }
 
-    private void parseType(Type type, long size, String variableName) {
-        if (type instanceof Type.Array typeArray) {
-            var isPresent = typeArray.elementCount().isPresent();
-            parseType(typeArray.elementType(), isPresent ? typeArray.elementCount().getAsLong() : 0, variableName);
-        } else if (type instanceof Type.Primitive typePrimitive) {
-            switch (typePrimitive.kind()) {
-                case Char -> {
-                    structRecord.addArgument("byte[] " + variableName);
-                    structRecord.addEmptyArgument("new byte[]{0}");
-                    structRecord.addLayoutMember("MemoryLayout.sequenceLayout(" + size + ", ValueLayout.JAVA_BYTE).withName(\"" + variableName + "\")");
-                    structRecord.addLayoutMethodHandle("private static final MethodHandle MH_" + variableName.toUpperCase() + " = LAYOUT.sliceHandle(MemoryLayout.PathElement.groupElement(\"" + variableName + "\"));");
-                    structRecord.addGettersArgument("invokeExact(MH_" + variableName.toUpperCase() + ", buffer).toArray(ValueLayout.JAVA_BYTE)");
-
-                    var setter = StructTemplate.ARRAY_SETTER_TEMPLATE.replace("${variableNameUpperCase}", variableName.toUpperCase());
-                    setter = setter.replace("${variableName}", variableName);
-                    setter = setter.replace("${typeUpperCase}", "JAVA_BYTE");
-                    structRecord.addSettersArgument(setter);
-                }
-                case Int -> {
-                    structRecord.addArgument("int " + variableName);
-                    structRecord.addEmptyArgument("0");
-                    structRecord.addLayoutMember("ValueLayout.JAVA_INT.withName(\"" + variableName + "\")");
-                    structRecord.addLayoutVarHandle("private static final VarHandle VH_" + variableName.toUpperCase() + " = LAYOUT.varHandle(MemoryLayout.PathElement.groupElement(\"" + variableName + "\"));");
-                    structRecord.addGettersArgument("(int) VH_" + variableName.toUpperCase() + ".get(buffer, 0L)");
-                    structRecord.addSettersArgument("\tVH_" + variableName.toUpperCase() + ".set(buffer, 0L, " + variableName + ");");
+    private NativeMemoryNode parseType(Type type, String variableName) {
+        switch (type) {
+            case Type.Array typeArray -> {
+                if (typeArray.elementType() instanceof Type.Delegated typeDelegated) {
+                    var node = parseType(typeDelegated.type(), variableName);
+                    System.err.println("Array: " + variableName + " " + node.getType());
+                    var isPresent = typeArray.elementCount().isPresent();
+                    var valueType = new TypeImpl.ArrayImpl(typeArray.kind(), isPresent ? typeArray.elementCount().getAsLong() : 0, node.getType());
+                    return new NativeMemoryNode(variableName, valueType, isPresent ? typeArray.elementCount().getAsLong() : 0);
+                } else {
+                    var isPresent = typeArray.elementCount().isPresent();
+                    return new NativeMemoryNode(variableName, type, isPresent ? typeArray.elementCount().getAsLong() : 0);
                 }
             }
-        } else if (type instanceof Type.Delegated typeDelegated) {
-            switch (typeDelegated.kind()) {
-                case TYPEDEF, SIGNED, UNSIGNED -> parseType(typeDelegated.type(), 0, variableName);
+            case Type.Primitive typePrimitive -> {
+                return new NativeMemoryNode(variableName, typePrimitive);
             }
+            case Type.Delegated typeDelegated -> {
+                switch (typeDelegated.kind()) {
+                    case TYPEDEF, SIGNED, UNSIGNED -> {
+                        var node = parseType(typeDelegated.type(), variableName);
+                        System.err.println(variableName + " " + node.getType());
+                        return new NativeMemoryNode(variableName, node.getType());
+                    }
+                    default ->
+                            System.err.println("Unknown delegated field type '" + variableName + " (" + typeDelegated.kind() + "')");
+                }
+            }
+            case Type.Declared typeDeclared -> {
+                if (!parsingStructsMap.containsKey(typeDeclared.tree().name())) {
+                    System.err.println(parsingStructsMap);
+                    System.err.println("Field '" + variableName + " (" + typeDeclared.tree().name() + ")' is present in structure '" + structName + "', but not declared in annotation! Please, add this field explicitly");
+                    System.exit(1);
+                }
+                return new NativeMemoryNode(variableName, type);
+            }
+            case null, default -> System.err.println("Unknown field type '" + variableName + " (" + type + "')");
         }
+        return null;
     }
 }
